--- a/career.html
+++ b/career.html
@@ -126,7 +126,7 @@
             <ul>Self-starter who is ready to dive in right away and start pitching.</ul>
             <ul>An understanding of data and how to use it to enhance media stories.</ul>
             <ul>Excellent writing and communication skills.</ul>
-            <a href="mailto:wendy.yang@riverpayment.com?Subject=Job%20Application" target="_top" style="text-align: center; color: black; display: block; padding-top: 2em; text-decoration: underline;">Email us your application</a>
+            <a href="mailto:info@riverpayment.com?Subject=Job%20Application" target="_top" style="text-align: center; color: black; display: block; padding-top: 2em; text-decoration: underline;">Email us your application</a>
 
     </div>
 
