--- a/contact.html
+++ b/contact.html
@@ -144,13 +144,16 @@
         <div class="col-md-6" style="padding: 5%">
           <h3><strong>Customer Support</strong></h3>
           <br>
-          <br>
           <p class="small"><img src="img/contact/image%203.png" style="float: left; padding: 10px; width: 50px;"><span><h6>Call us:</h6></span>
             <p>+1 (888) 875-4079</p>
           <br>
           <img src="img/contact/image%204.png" style="float: left; padding: 10px; width: 50px;"><span ><h6 style="margin-top: 4%;">Email us:</h6></span>
           info@riverpayment.com</p>
+          <br>
+          <img src="img/contact/work.png" style="float: left; padding: 10px; width: 50px;"><span ><h6 style="margin-top: 4%;">Office Hours:</h6></span>
+          Monday - Friday: 9am - 6pm</p>
         </div>
+        
       </div>
     </div>
     </div>
