--- a/service.html
+++ b/service.html
@@ -121,7 +121,7 @@
           <h4 class="service-heading">Security and Compliance</h4>
           <p class="text-muted">Security and Compliance
 
-            RiverPay’s services are fully PCI compliant -- card data is tokenized and never exposed during transactions. As RiverPay’s major partners, Alipay and WeChat Pay are the first mobile payment applications in the world to obtain both ISO27001 and TRUSTe certifications to eradicate fraud or chargeback.</p>
+            RiverPay’s services are fully PCI compliant - card data is tokenized and never exposed during transactions. As RiverPay’s major partners, Alipay and WeChat Pay are the first mobile payment applications in the world to obtain both ISO27001 and TRUSTe certifications to eradicate fraud or chargeback.</p>
         </div>
       </div>
     </div>
