some file changes

--- a/contact.html
+++ b/contact.html
@@ -142,7 +142,7 @@
           </div>
         </div>
         <div class="col-md-6" style="padding: 5%">
-          <h3><strong>Customer Support</strong></h3>
+          <h3><strong>Contact Information</strong></h3>
           <br>
           <p class="small"><img src="img/contact/image%203.png" style="float: left; padding: 10px; width: 50px;"><span><h6>Call us:</h6></span>
             <p>+1 (888) 875-4079</p>
