--- a/service.html
+++ b/service.html
@@ -222,7 +222,7 @@
                   <h4>Day 0:</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Transaction occurs</p>
+                  <p class="text-muted">Transaction occurs between consumer and merchant</p>
                 </div>
               </div>
             </li>
