--- a/career.html
+++ b/career.html
@@ -82,14 +82,14 @@
   
         <div class="row text-center">
           <div class="col-md-4">
-              <div class="team-member" id="canpic">
+              <div class="team-member">
               <button id="button" onclick="myFunction1()" style="border: none; background-color: white;">
                 <img class="mx-auto rounded-circle" src="img/Career/canada.png">
               </button>
             </div>
           </div>
           <div class="col-md-4">
-              <div class="team-member" id="ampic">
+              <div class="team-member">
                <button id="button" onclick="myFunction2()" style="border: none; background-color: white;">
                 <img class="mx-auto rounded-circle" src="img/Career/america.png">
               </button>
@@ -97,7 +97,7 @@
             
           </div>
           <div class="col-md-4">
-              <div class="team-member" id="chinpic">
+              <div class="team-member">
                 <button id="button" onclick="myFunction3()" style="border: none; background-color: white;">
                   <img class="mx-auto rounded-circle" src="img/Career/china.png">
                 </button>
