--- a/service.html
+++ b/service.html
@@ -65,10 +65,48 @@
       <div class="intro-text">
         <div class="intro-lead-in">Getting started with RiverPay</div>
         <div class="intro-heading">Our payment solution allows customers to pay in CNY and merchants to receive in their own currency.</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#advantages">Tell Me More</a>
       </div>
     </div>
   </header>
+
+  <!-- advantage -->
+   <section id="advantages" class="bg-light">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase">Advantages of RiverPay</h2>
+          </div>
+        </div>
+        <div class="row" style="justify-content: center; display: flex; padding-top: 10%;">
+          <div class="col-md-3">
+              <span class="fa-stack fa-4x" style="text-align: center;">
+              <img class="img-responsive" src="img/Service/service_icon1.png" >
+              </span>
+              <p class="text-muted">Data based precision marketing solutions and 24/7 merchant management platform for lead generation and extraneous income</p>
+          </div>
+          <div class="col-md-3">
+              <span class="fa-stack fa-4x" style="text-align: center;">
+              <img class="img-responsive" src="img/about/abt_icon4.png">
+              </span>
+              <p class="text-muted">Patent pending integration technology with over 80% mainstream POS and merchant ERP systems in real time</p>
+          </div>
+          <div class="col-md-3" >
+              <span class="fa-stack fa-4x" style="text-align: center;">
+              <img class="img-responsive" src="img/about/abt_icon3.png" >
+              </span>
+              <p class="text-muted">One-stop technology solutions and settlement services via in-store, online and mobile transactions</p>
+          </div>
+          <div class="col-md-3">
+              <span class="fa-stack fa-4x" style="text-align: center;">
+              <img class="img-responsive" src="img/Service/service_icon4.png" >
+              </span>
+              <p class="text-muted">Expandable technological capabilities powered by acquisition and partnership with research and development teams</p>
+          </div>
+        </div>
+      </div> 
+
+    </section> 
 
   <section id="services">
     <div class="container">
@@ -128,59 +166,7 @@
   </section>
 
 
-  <!-- Services -->
-  <!-- <section id="advantages" class="bg-gradient-gray">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Advantages of RiverPay</h2>
-        </div>
-      </div>
-      <div class="row" style="justify-content: center; display: flex;">
-        <div class="col-md-3">
-            <img class="img-responsive" src="img/Service/pt1.PNG" >
-        </div>
-        <div class="col-md-3">
-            <img class="img-responsive" src="img/Service/pt2.png">
-        </div>
-        <div class="col-md-3" >
-            <img class="img-responsive" src="img/Service/pt3.png" >
-        </div>
-        <div class="col-md-3">
-            <img class="img-responsive" src="img/Service/pt4.png" >
-        </div>
-      </div>
-    </div> 
-        <div class="store-soln" style="padding: 3em;"> 
-          <h5 style="font-weight: 100; padding: 1em;">In Store Solutions</h5>
-          <img src="img/service/instore.png" style="width: 15em; float: left; padding: 1em; padding-top: 0;">
-          <p style="margin-left: 25%;"> RiverPay offers multiple standalone point-of-sale terminals and integrated solutions directly into existing cashier systems for merchants to use right away. Integration will be completed in real time and there is no need to worry about reconciliation.</p>
-        </div>
-        <div class="online-soln" style="padding: 3em;"> 
-          <h5 style="font-weight: 100; padding: 1em;">Online Solutions</h5>
-          <img src="img/Service/Ecomm2.png" style="width: 15em; float: left; padding: 1em; padding-top: 0;">
-          <p style="margin-left: 25%;"> RiverPay offers a full set of online API gateway to support all website or mobile payment needs. Upon enrollment, RiverPay will provide dedicated technical support to guide the setup and a typical e-commerce or m-commerce integration takes less than a week.</p>
-        </div>
-        <div class="report-soln" style="padding: 3em;"> 
-            <h5 style="font-weight: 100; padding: 1em;">Reporting & Settlement</h5>
-            <img src="img/Service/settlement.png" style="width: 13em; float: left; padding: 1em; padding-top: 0;">
-            <p style="margin-left: 25%;"> RiverPay offers real-time reporting of transactions as well as detailed daily and monthly transaction level settlement reports designed for all kinds of merchants from enterprises to SMEs.</p>
-        </div>
-        <br>
-        <div class="market-soln" style="padding: 3em;"> 
-            <h5 style="font-weight: 100; padding: 1em;">Marketing Solutions</h5>
-            <img src="img/service/marketingicon.png" style="width: 13em; float: left; padding: 1em; padding-top: 0;">
-            <p style="margin-left: 25%;"> RiverPay offers real-time reporting of transactions as well as detailed daily and monthly transaction level settlement reports designed for all kinds of merchants from enterprises to SMEs.</p>
-        </div>
-        <br>
-        <div class="secure-soln" style="padding: 3em;"> 
-            <h5 style="font-weight: 100; padding: 1em;">Security and Compliance</h5>
-            <img src="img/Service/security.png" style="width: 13em; float: left; padding: 1em; padding-top: 0;">
-            <p style="margin-left: 25%;"> RiverPay’s services are fully PCI compliant - card data is tokenized and never exposed during transactions. As RiverPay’s major partners, Alipay and WeChat Pay are the first mobile payment applications in the world to obtain both ISO27001 and TRUSTe certifications to eradicate fraud or chargeback.</p>
-        </div>
-      </div>
-    </div>
-  </section> -->
+
 
 
 
@@ -222,7 +208,11 @@
                   <h4>Day 0:</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Transaction occurs between consumer and merchant</p>
+                  <p class="text-muted">Transaction occurs 
+                    <br>
+                    <br>
+                    <br>
+                    <br></p>
                 </div>
               </div>
             </li>
@@ -248,7 +238,9 @@
                   <h4>Day 2:</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">RiverPay receives USD/CAD/EUR/GBP/other currencies and settles to merchants</p>
+                  <p class="text-muted">RiverPay receives USD/CAD/EUR/GBP/other currencies and settles to merchants
+                    <br>
+                  </p>
                 </div>
               </div>
             </li>
