--- a/media.html
+++ b/media.html
@@ -75,7 +75,7 @@
     <div id="dib-categories"></div>
 
     <div id="dib-posts"></div>
-     </section>
+  </section>
 
   
   <!-- Footer -->
@@ -101,6 +101,7 @@
   <!-- Contact form JavaScript -->
   <script src="js/jqBootstrapValidation.js"></script>
   <script src="js/contact_me.js"></script>
+  <script type="text/javascript" src="js/media.js"></script>
 
   <!-- Custom scripts for this template -->
   <script src="js/agency.min.js"></script>
