--- a/media.html
+++ b/media.html
@@ -71,11 +71,13 @@
     </div>
   </header>
 
-  <section id="services">
-    <div id="dib-categories"></div>
+  <div class="container">
+    <section id="services">
+      <div id="dib-categories"></div>
 
-    <div id="dib-posts"></div>
-  </section>
+      <div id="dib-posts"></div>
+    </section>
+    </div>
 
   
   <!-- Footer -->
@@ -105,12 +107,6 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/agency.min.js"></script>
-
-    <script type="text/javascript">
-        var dib_id = '0DLRM3YW97U5FWSBG586';
-    </script>
-    <script src="https://dropinblog.com/js/embed.js"></script>
-
     <script type="text/javascript">
         var dib_id = '0DLRM3YW97U5FWSBG586';
         var dib_recent_post_list = 3;
