--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="about.html">About</a>
+            <a class="nav-link js-scroll-trigger" href="about">About</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="service.html">Services</a>
+              <a class="nav-link js-scroll-trigger" href="service">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="media.html">Media</a>
+            <a class="nav-link js-scroll-trigger" href="media">Media</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="career.html">Career</a>
+            <a class="nav-link js-scroll-trigger" href="career">Career</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="contact.html">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="contact">Contact</a>
           </li>
         </ul>
       </div>
