--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="index.html"><img src="img/about/rpay.png" style="width:202px; height: auto;"></a>
+      <a class="navbar-brand js-scroll-trigger" href="index"><img src="img/about/rpay.png" style="width:202px; height: auto;"></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -40,19 +40,19 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="about.html" style="color: #13AAE0;">About</a>
+            <a class="nav-link js-scroll-trigger" href="about" style="color: #13AAE0;">About</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="service.html">Services</a>
+              <a class="nav-link js-scroll-trigger" href="service">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="media.html">Media</a>
+            <a class="nav-link js-scroll-trigger" href="media">Media</a>
         </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="career.html">Career</a>
+            <a class="nav-link js-scroll-trigger" href="career">Career</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="contact.html">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="contact">Contact</a>
           </li>
         </ul>
       </div>
