--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
     <!-- Custom styles for this template -->
-    <link href="css/career.css" rel="stylesheet">
+    <link href="css/about.css" rel="stylesheet">
     <link rel="icon" type="image/gif/png" href="img/logo.png">
 
     <title>Blog</title>
@@ -65,19 +65,21 @@
     </div>
 </nav>
 
-<div class="container py-3">
-    <div class="row">
-        <div class="col-sm-8">
-            <div id="dib-posts"></div>
-        </div>
-        <div class="col-sm-4">
-            <h2>Recent Posts</h2>
-            <div id="dib-recent-post-list"></div>
-            <h2>Categories</h2>
-            <div id="dib-categories"></div>
+<section>
+    <div class="container py-3">
+        <div class="row">
+            <div class="col-sm-8">
+                <div id="dib-posts"></div>
+            </div>
+            <div class="col-sm-4">
+                <h2>Recent Posts</h2>
+                <div id="dib-recent-post-list"></div>
+                <h2>Categories</h2>
+                <div id="dib-categories"></div>
+            </div>
         </div>
     </div>
-</div>
+</section>
 
 <!-- Bootstrap core JavaScript -->
 <script src="vendor/jquery/jquery.min.js"></script>
